# lib

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  README.md  trace_x.h
cmake/: Config.cmake.in  FindPython.cmake  TraceX.pc.cmake
detail/: api.h  print_helper.h  stl_print.h  trace.h  trace_x_c.h  trace_x_ex.h  trace_x_off.h  trace_x_s.h  trace_x_undef.h  traits.h  types.h
detail/fmt/: format.h  ostream.h
impl/: format.cc  logger.cpp  platform.h  stack_trace.h  stack_walker.cpp  std_restreamer.h  trace.cpp  trace_swig.i  types.h
impl/spdlog/: logger.h
impl/spdlog/sinks/: file_sinks.h
test/: test.py
tools/: FindTraceX.cmake  cv_image_trace_x.h  qt_image_trace_x.h  qt_print.h  qt_trace_handler.h
